Fixed CFS image quotes, white spaces on FAQ waystogive

--- a/wp-content/themes/bigsisters/sass/_page-templates.scss
+++ b/wp-content/themes/bigsisters/sass/_page-templates.scss
@@ -746,7 +746,8 @@
 .page-header-style,
 .annual-reports,
 .press-releases,
-.page-header
+.page-header,
+.host-a-fund-title
  {
   text-align: center;
 }
@@ -855,7 +856,7 @@ ul {
   flex: 0 1 48%;
   text-align: center;
   margin: 6px 0;
-  box-shadow: 3px 3px 3px 3px #ccc;
+  box-shadow: 1px 1px 1px 2px #ccc;
   background-color: $color__offwhite-brand;
   @include desktop {
     flex: 0 1 32%;
@@ -1137,7 +1138,6 @@ ul {
             color: #fff;
         }
     }
-  }
 }
 
 .fundraiser-event-hero {
