--- a/wp-content/themes/bigsisters/style.css
+++ b/wp-content/themes/bigsisters/style.css
@@ -1066,7 +1066,7 @@ object {
   @media (min-width: 900px) {
     .bigsister-hero-fp {
       padding: 5rem 0 0 5rem;
-      height: 77vh; } }
+      height: 82vh; } }
   .bigsister-hero-fp .hero-quote {
     padding: 0.5rem;
     line-height: 1.5rem;
@@ -1078,7 +1078,9 @@ object {
       .bigsister-hero-fp .hero-quote {
         width: 29.6rem;
         line-height: 2.7rem;
-        font-size: 2.15rem; } }
+        font-size: 2.15rem;
+        padding: 5rem 0 0 5rem;
+        height: 77vh; } }
 
 .bxstyles1 {
   margin-bottom: -40px; }
@@ -1824,7 +1826,8 @@ object {
 .page-header-style,
 .annual-reports,
 .press-releases,
-.page-header {
+.page-header,
+.host-a-fund-title {
   text-align: center; }
 
 .enroll-title, .study-buddy-title, .step-color {
@@ -1948,7 +1951,7 @@ ul {
           flex: 0 1 48%;
   text-align: center;
   margin: 6px 0;
-  box-shadow: 3px 3px 3px 3px #ccc;
+  box-shadow: 1px 1px 1px 2px #ccc;
   background-color: #F0F0F0; }
   @media (min-width: 900px) {
     .grid-icon {
